add `GET /users` endpoint
